@@ -1,5 +1,7 @@
 Changes in 1.8 (??.??.2011)
 
+ - speedup for collada writing.
+
  - speedup for xml-writing.
 
  - CFileSystem::removeFileArchive now checking for normalized path
